--- a/W6D2/css_flex_exercise/assets/flex.css
+++ b/W6D2/css_flex_exercise/assets/flex.css
@@ -17,6 +17,11 @@ ul li a, figcaption a {
   color: inherit;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
 header > img {
   width: 100px;
 }
@@ -69,8 +74,12 @@ nav {
   display: flex;
 }
 
+nav ul {
+  display: flex;
+  justify-content: space-between;
+}
+
 nav ul li {
-    display: flex;
 }
 
 nav ul li a {
@@ -107,9 +116,4 @@ textarea {
 
 label {
     display: block;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
 }
